# Face_Recognition_NCNN_Linux

./: CMakeLists.txt  README.md
output/embedding/: face1_embedding.txt  face2_embedding.txt
src/: capture.cpp  compare_embedding.cpp  embedding.cpp  main.cpp  recognition.cpp
